objects/Field_Tracker_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Tracked Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracked Is Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Tracked Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Tracker Configuration</label>
</CustomObject>